# warden

./: Cargo.toml
warden-core/: Cargo.toml
warden-core/assets/: 401.html  404.html  500.html  dynamic.html  hello.html
warden-core/src/: auth.rs  core.rs  lib.rs  router.rs  utils.rs
warden-core/src/core/: config.rs
warden-server/: Cargo.toml
warden-server-tui/: Cargo.toml
warden-server-tui/src/: main.rs
warden-server-tui/src/components/: text.rs
warden-server-tui/src/pages/: home.rs
warden-server/src/: main.rs
