[package]
name = "warden-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
http = "1.4.2"
http-body-util = "0.1.4"
hyper = { version = "1.10.1", features = [
    "server",
    "client",
    "http1",
    "http2",
] }
hyper-rustls = { version = "0.27.9", features = ["http2"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
log = "0.4.33"
rustls = "0.23.42"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.52.4", features = [
    "signal",
    "net",
    "macros",
    "rt",
    "fs",
] }
tokio-rustls = "0.26.4"
