[package]
name = "warden-server-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
crossterm = { version = "0.29.0", features = ["event-stream"] }
env_logger = "0.11.11"
futures = "0.3.33"
log = "0.4.33"
ratatui = "0.30.2"
reqwest = "0.13.4"
tokio = { version = "1.52.4", features = ["rt", "rt-multi-thread"] }
warden-core = { workspace = true }
